Whole page drop area, fixed design being too wide

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -23,6 +23,22 @@ $link-color: $color-highlight;
 $link-hover-color: darken($link-color, 15%);
 $component-active-bg: $color-highlight;
 
+//Grid sizes (we are removing the XXL size)
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px
+);
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+);
+
 //List Group Color Overrides
 $list-group-bg: $color-background;
 $list-group-border-color: $color-medium;
