--- a/src/app/convert/convert.component.scss
+++ b/src/app/convert/convert.component.scss
@@ -1,38 +1,89 @@
 @import "../../variables";
 
-.drop-area {
+//View Encapsulation is DISABLED for this component so that styles from
+// the body tag applied via the dragAndDropFiles directive can be edited here
+
+#drop-area {
+  //Take up the entire size of the screen
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+
+  //Setup flex container so the message can be centered
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  //Allow clicks to pass through since this covered the entre document
+  pointer-events: none;
+
+  //Style
+  background: rgba(0, 0, 0, 0.6);
+
+  //Setup to allow fade in when
+  opacity: 0;
+  transition: opacity 300ms;
+
+  body.drag-over & {
+    // This class is added to the body by the dragAndDropFiles directive
+    opacity: 1;
+  }
+
+  &-message {
+    font-size: $font-size-lg;
+    font-weight: bold;
+    box-shadow: 0 0 50px $color-highlight, inset 0 0 5px $color-highlight;
+    background-color: $color-light;
+
+    border: 1px solid $color-highlight;
+    border-radius: $border-radius;
+    color: $color-dark;
+    padding: $spacer;
+  }
+}
+
+.drop-instructions {
   background-color: $color-medium;
   border: 1px solid $color-highlight;
   border-radius: $border-radius;
   color: $color-dark;
   text-align: center;
-  padding: 10px;
-  margin-bottom: 10px;
-  transition: all 0.4s;
-
-  &.drag-over {
-    box-shadow: 0 0 50px $color-highlight, inset 0 0 10px $color-highlight;
-    background-color: $color-light;
-    color: $color-text;
-  }
+  padding: $spacer;
+  margin-bottom: $spacer;
 }
 
-#begin-area .drop-area {
+#begin-area .drop-instructions {
   p {
-    font-size: 40px;
-    line-height: 40px;
+    font-size: 30px;
+    line-height: 30px;
     margin: 0;
-    padding: 50px;
+    padding: 20px;
     vertical-align: middle;
   }
 
   small {
     display: block;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-bottom: 10px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    p {
+      font-size: 40px;
+      line-height: 40px;
+      padding: 50px;
+    }
+
+    small {
+      margin-top: 50px;
+    }
   }
 }
 
+//The list menu of types we can convert to
 #convert-types {
   &-title {
     padding-top: 3px;
@@ -40,7 +91,7 @@
     background-color: $color-medium;
   }
 
-  .list-group-item{
+  .list-group-item {
     cursor: pointer;
   }
 
